Allow filters to work on INPUT_SERVER in CLI (bug #44779)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@263369 c90b9560-bf6c-de11-be94-00142212c4b1